# compact

./: .gitignore  .ocamlformat  LICENSE  README.md  compact-bench.opam  compact.opam  dune-project
bench/: README.md  compact_bench.ml  dune  main.ml
bench/analysis/: main.py
src/: arena.ml  arena.mli  compact.ml  compact.mli  dune  hashed_container.ml  hashed_container.mli  hashed_container_bucket.ml  hashed_container_bucket.mli  hashed_container_intf.ml  hashset.ml  hashset.mli  hashset_fixed_size_string.ml  hashset_fixed_size_string.mli  hashtbl.ml  hashtbl.mli  immediate_array.ml  immediate_array.mli  import.ml  internal.ml  invariant.ml  invariant.mli  invariant_intf.ml  obj_array.ml  obj_array.mli  obj_either.ml  obj_either.mli  uniform_array.ml  uniform_array.mli  uniform_array_intf.ml
test/: compact_test_helpers.ml  dune  test.ml  test_arena.ml  test_hashed_container.ml  test_hashtbl.ml  test_immediate_array.ml  test_uniform_array.ml
